--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.2.2
   intl: ^0.18.1
   table_calendar: ^3.0.9
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
